feat: se agrego endpoint para el registro y consulta de aplicaciones de practicas
